[fix]: [CDS-82232]: delegate selector precedence artifact step (#54903)
* [fix]: [CDS-82232]: delegate selector hierarchy service step

* add FF CDS_DELEGATE_SELECTOR_PRECEDENCE

* update EmptyStepParamaters and use

* remove unused method

* remove blank line

* update/add unit tests

* add unit tests

* fix UT and format issues

* addressing comments

* format fix

* update UT